Implemented PS-7332 (Merge MySQL 5.7.32) (docs)
https://jira.percona.com/browse/PS-7332
***
Updated man pages from MySQL Server 5.7.32 source tarball.
***
Updated 'scripts/fill_help_tables.sql' from MySQL Server 5.7.32 source tarball.

--- a/man/ndb_import.1
+++ b/man/ndb_import.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_import\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/02/2020
+.\"      Date: 09/22/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_IMPORT\FR" "1" "06/02/2020" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_IMPORT\FR" "1" "09/22/2020" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -188,7 +188,7 @@ Options Common to NDB Cluster Programs(1)\&.
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.249.\ \&Command\-line options for the ndb_import program
+.B Table\ \&21.33.\ \&Command\-line options for the ndb_import program
 .TS
 allbox tab(:);
 lB lB lB.
@@ -200,46 +200,46 @@ T}:T{
 Added, Deprecated, or Removed
 T}
 .T&
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l
-l l l.
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l
+lB l l.
 T{
 .PP
 \fB \fR\fB--abort-on-error\fR\fB \fR
@@ -643,13 +643,6 @@ T}
 \fB\-\-abort\-on\-error\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -690,13 +683,6 @@ Dump core on any fatal error; used for debugging only\&.
 \fB\-\-ai\-increment\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -751,13 +737,6 @@ system variable does in the MySQL Server\&.
 \fB\-\-ai\-offset\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -812,13 +791,6 @@ system variable\&.
 \fB\-\-ai\-prefetch\-sz\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -873,13 +845,6 @@ system variable does in the MySQL Server\&.
 \fB\-\-connections\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -932,13 +897,6 @@ Number of cluster connections to create\&.
 \fB\-\-continue\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -979,13 +937,6 @@ When a job fails, continue to the next job\&.
 \fB\-\-db\-workers\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1044,13 +995,6 @@ Number of threads, per data node, executing database operations\&.
 \fB\-\-errins\-type\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1110,13 +1054,7 @@ value to obtain all possible values\&. This option is used for testing purposes 
 \fB\-\-errins\-delay\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -1153,6 +1091,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+ms
+T}
 .TE
 .sp 1
 Error insert delay in milliseconds; random variation is added\&. This option is used for testing purposes only\&.
@@ -1169,13 +1112,6 @@ Error insert delay in milliseconds; random variation is added\&. This option is 
 \fB\-\-fields\-enclosed\-by\fR=\fIchar\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1221,13 +1157,6 @@ statement, specifying a character to be interpeted as quoting field values\&. Fo
 \fB\-\-fields\-escaped\-by\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1272,13 +1201,6 @@ statement\&.
 \fB\-\-fields\-optionally\-enclosed\-by\fR=\fIchar\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1324,13 +1246,6 @@ statement, specifying a character to be interpeted as optionally quoting field v
 \fB\-\-fields\-terminated\-by\fR=\fIchar\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1375,13 +1290,7 @@ statement, specifying a character to be interpeted as the field separator\&.
 \fB\-\-idlesleep\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -1418,6 +1327,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+ms
+T}
 .TE
 .sp 1
 Number of milliseconds to sleep waiting for more work to perform\&.
@@ -1434,13 +1348,6 @@ Number of milliseconds to sleep waiting for more work to perform\&.
 \fB\-\-idlespin\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1493,13 +1400,6 @@ Number of times to retry before sleeping\&.
 \fB\-\-ignore\-lines\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1554,13 +1454,6 @@ lines of the input file\&. This can be employed to skip a file header that does 
 \fB\-\-input\-type\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1613,13 +1506,6 @@ is intended for testing purposes only\&. \&.
 \fB\-\-input\-workers\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1678,13 +1564,6 @@ Set the number of threads processing input\&.
 \fB\-\-keep\-state\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1727,13 +1606,6 @@ files) when it completes a job\&. Specify this option (nor argument is required)
 \fB\-\-lines\-terminated\-by\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1778,13 +1650,6 @@ statement, specifying a character to be interpeted as end\-of\-line\&.
 \fB\-\-log\-level\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1833,13 +1698,7 @@ In debug builds of NDB only, the logging level can be set using this option to a
 \fB\-\-max\-rows\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -1876,6 +1735,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Import only this number of input data rows; the default is 0, which imports all rows\&.
@@ -1892,13 +1756,7 @@ Import only this number of input data rows; the default is 0, which imports all 
 \fB\-\-monitor\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -1935,6 +1793,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Periodically print the status of a running job if something has changed (status, rejected rows, temporary errors)\&. Set to 0 to disable this reporting\&. Setting to 1 prints any change that is seen\&. Higher values reduce the frequency of this status reporting\&.
@@ -1951,13 +1814,6 @@ Periodically print the status of a running job if something has changed (status,
 \fB\-\-no\-asynch\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -1998,13 +1854,6 @@ Run database operations as batches, in single transactions\&.
 \fB\-\-no\-hint\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2045,13 +1894,7 @@ Do not use distribution key hinting to select a data node\&.
 \fB\-\-opbatch\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2088,6 +1931,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Set a limit on the number of operations (including blob operations), and thus the number of asynchronous transactions, per execution batch\&.
@@ -2104,13 +1952,7 @@ Set a limit on the number of operations (including blob operations), and thus th
 \fB\-\-opbytes\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2147,6 +1989,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Set a limit on the number of bytes per execution batch\&. Use 0 for no limit\&.
@@ -2163,13 +2010,6 @@ Set a limit on the number of bytes per execution batch\&. Use 0 for no limit\&.
 \fB\-\-output\-type\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2220,13 +2060,6 @@ is used only for testing\&.
 \fB\-\-output\-workers\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2279,13 +2112,7 @@ Set the number of threads processing output or relaying database operations\&.
 \fB\-\-pagesize\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2322,6 +2149,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Align I/O buffers to the given size\&.
@@ -2338,13 +2170,6 @@ Align I/O buffers to the given size\&.
 \fB\-\-pagecnt\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2397,13 +2222,7 @@ Set the size of I/O buffers as multiple of page size\&. The CSV input worker all
 \fB\-\-polltimeout\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2440,6 +2259,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+ms
+T}
 .TE
 .sp 1
 Set a timeout per poll for completed asynchonous transactions; polling continues until all polls are completed, or until an error occurs\&.
@@ -2456,13 +2280,6 @@ Set a timeout per poll for completed asynchonous transactions; polling continues
 \fB\-\-rejects\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2523,13 +2340,6 @@ run for this purpose\&.
 \fB\-\-resume\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2570,13 +2380,7 @@ If a job is aborted (due to a temporary db error or when interrupted by the user
 \fB\-\-rowbatch\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2613,6 +2417,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+rows
+T}
 .TE
 .sp 1
 Set a limit on the number of rows per row queue\&. Use 0 for no limit\&.
@@ -2629,13 +2438,7 @@ Set a limit on the number of rows per row queue\&. Use 0 for no limit\&.
 \fB\-\-rowbytes\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2672,6 +2475,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+bytes
+T}
 .TE
 .sp 1
 Set a limit on the number of bytes per row queue\&. Use 0 for no limit\&.
@@ -2688,13 +2496,6 @@ Set a limit on the number of bytes per row queue\&. Use 0 for no limit\&.
 \fB\-\-stats\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2737,16 +2538,9 @@ is not also specified)\&.
 .sp -1
 .IP \(bu 2.3
 .\}
-\fB \-\-state\-dir\fR=\fIname\fR
+\fB\-\-state\-dir\fR=\fIname\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2790,13 +2584,7 @@ Where to write the state files (\fItbl_name\fR\&.map,
 \fB\-\-tempdelay\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
+lB l
 lB l
 lB l
 lB l
@@ -2833,6 +2621,11 @@ Maximum Value
 T}:T{
 4294967295
 T}
+T{
+Unit
+T}:T{
+ms
+T}
 .TE
 .sp 1
 Number of milliseconds to sleep between temporary errors\&.
@@ -2849,13 +2642,6 @@ Number of milliseconds to sleep between temporary errors\&.
 \fB\-\-temperrors\fR=\fI#\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -2911,13 +2697,6 @@ file\&.
 \fB\-v\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
