--- a/man/ndb_mgm.1
+++ b/man/ndb_mgm.1
@@ -2,12 +2,12 @@
 .\"     Title: \fBndb_mgm\fR
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.79.1 <http://docbook.sf.net/>
-.\"      Date: 06/02/2020
+.\"      Date: 09/22/2020
 .\"    Manual: MySQL Database System
 .\"    Source: MySQL 5.7
 .\"  Language: English
 .\"
-.TH "\FBNDB_MGM\FR" "1" "06/02/2020" "MySQL 5\&.7" "MySQL Database System"
+.TH "\FBNDB_MGM\FR" "1" "09/22/2020" "MySQL 5\&.7" "MySQL Database System"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -76,7 +76,7 @@ Options Common to NDB Cluster Programs(1)\&.
 .nr an-no-space-flag 1
 .nr an-break-flag 1
 .br
-.B Table\ \&21.241.\ \&Command\-line options for the ndb_mgm program
+.B Table\ \&21.25.\ \&Command\-line options for the ndb_mgm program
 .TS
 allbox tab(:);
 lB lB lB.
@@ -88,16 +88,16 @@ T}:T{
 Added, Deprecated, or Removed
 T}
 .T&
-l l l
-l l l.
+lB l l
+lB l l.
 T{
 .PP
 \fB--try-reconnect=#\fR,
 .PP
 \fB \fR\fB-t\fR\fB \fR
 T}:T{
-Set the number of times to retry a connection before giving up; synonym
-              for --connect-retries
+Set number of times to retry connection before giving up; synonym for
+              --connect-retries
 T}:T{
 .PP
 (Supported in all MySQL 5.7 based releases)
@@ -127,13 +127,6 @@ T}
 \fB\-\-connect\-retries=\fR\fB\fI#\fR\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -191,13 +184,6 @@ Options Common to NDB Cluster Programs(1), for more information\&.
 \fB\-e \fR\fBcommand\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l.
 T{
 Command-Line Format
@@ -259,13 +245,6 @@ be enclosed in quotation marks\&. Either single or double quotation marks may be
 \fB\-\-try\-reconnect=\fR\fB\fInumber\fR\fR
 .TS
 allbox tab(:);
-lB lB.
-T{
-Property
-T}:T{
-Value
-T}
-.T&
 lB l
 lB l
 lB l
@@ -327,7 +306,7 @@ This option is deprecated and subject to removal in a future release\&. Use
 Additional information about using
 \fBndb_mgm\fR
 can be found in
-Section\ \&21.5.2, \(lqCommands in the NDB Cluster Management Client\(rq\&.
+Section\ \&21.5.1, \(lqCommands in the NDB Cluster Management Client\(rq\&.
 .SH "COPYRIGHT"
 .br
 .PP
